parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> block
Rule 1     block -> statement
Rule 2     block -> statement block
Rule 3     statement -> directive
Rule 4     statement -> annotation
Rule 5     statement -> line
Rule 6     statement -> COMMENT
Rule 7     directive -> scene_directive
Rule 8     directive -> enter_directive
Rule 9     directive -> action_directive
Rule 10    directive -> exit_directive
Rule 11    directive -> music_directive
Rule 12    directive -> gfx_directive
Rule 13    directive -> sfx_directive
Rule 14    directive -> fmv_directive
Rule 15    directive -> camera_directive
Rule 16    directive -> choice_directive
Rule 17    annotation -> section_annotation
Rule 18    annotation -> flagset_annotation
Rule 19    annotation -> varset_annotation
Rule 20    annotation -> dialog_annotation
Rule 21    annotation -> goto_annotation
Rule 22    annotation -> execute_annotation
Rule 23    annotation -> end_annotation
Rule 24    annotation -> while_annotation
Rule 25    annotation -> if_annotation
Rule 26    annotation -> PYTHON_BLOCK
Rule 27    line -> ID : STRING
Rule 28    line -> : STRING
Rule 29    scene_directive -> DIRECTIVEOPEN_SCENE : ID ]
Rule 30    scene_directive -> DIRECTIVEOPEN_SCENE : transition_to ID ]
Rule 31    enter_directive -> DIRECTIVEOPEN_ENTER : ID ]
Rule 32    enter_directive -> DIRECTIVEOPEN_ENTER : ID ( actor_states ) ]
Rule 33    enter_directive -> DIRECTIVEOPEN_ENTER : ID transition_in ]
Rule 34    enter_directive -> DIRECTIVEOPEN_ENTER : ID ( actor_states ) transition_in ]
Rule 35    enter_directive -> DIRECTIVEOPEN_ENTER : ID motion_geometry ]
Rule 36    enter_directive -> DIRECTIVEOPEN_ENTER : ID ( actor_states ) motion_geometry ]
Rule 37    enter_directive -> DIRECTIVEOPEN_ENTER : ID transition_in motion_geometry ]
Rule 38    enter_directive -> DIRECTIVEOPEN_ENTER : ID ( actor_states ) transition_in motion_geometry ]
Rule 39    action_directive -> DIRECTIVEOPEN_ACTION ID : actor_states ]
Rule 40    action_directive -> DIRECTIVEOPEN_ACTION ID : GO destination ]
Rule 41    action_directive -> DIRECTIVEOPEN_ACTION ID : actor_states , GO destination ]
Rule 42    exit_directive -> DIRECTIVEOPEN_EXIT : ID ]
Rule 43    exit_directive -> DIRECTIVEOPEN_EXIT : ID transition_out ]
Rule 44    exit_directive -> DIRECTIVEOPEN_EXIT : ID motion_geometry ]
Rule 45    exit_directive -> DIRECTIVEOPEN_EXIT : ID transition_out motion_geometry ]
Rule 46    music_directive -> DIRECTIVEOPEN_MUSIC : STOP ]
Rule 47    music_directive -> DIRECTIVEOPEN_MUSIC : STOP duration ]
Rule 48    music_directive -> DIRECTIVEOPEN_MUSIC : STOP any_element_id ]
Rule 49    music_directive -> DIRECTIVEOPEN_MUSIC : STOP any_element_id duration ]
Rule 50    music_directive -> DIRECTIVEOPEN_MUSIC : element_id ]
Rule 51    music_directive -> DIRECTIVEOPEN_MUSIC : element_id , FADEOUT_OLD ]
Rule 52    music_directive -> DIRECTIVEOPEN_MUSIC : element_id , FADEOUT_OLD duration ]
Rule 53    gfx_directive -> DIRECTIVEOPEN_GFX : element_id ]
Rule 54    gfx_directive -> DIRECTIVEOPEN_GFX : LOOP element_id ]
Rule 55    gfx_directive -> DIRECTIVEOPEN_GFX : STOP any_element_id ]
Rule 56    gfx_directive -> DIRECTIVEOPEN_GFX : STOP any_element_id duration ]
Rule 57    gfx_directive -> DIRECTIVEOPEN_GFX : STOP ]
Rule 58    gfx_directive -> DIRECTIVEOPEN_GFX : STOP duration ]
Rule 59    sfx_directive -> DIRECTIVEOPEN_SFX : element_id ]
Rule 60    sfx_directive -> DIRECTIVEOPEN_SFX : LOOP element_id ]
Rule 61    sfx_directive -> DIRECTIVEOPEN_SFX : STOP any_element_id ]
Rule 62    sfx_directive -> DIRECTIVEOPEN_SFX : STOP any_element_id duration ]
Rule 63    sfx_directive -> DIRECTIVEOPEN_SFX : STOP ]
Rule 64    sfx_directive -> DIRECTIVEOPEN_SFX : STOP duration ]
Rule 65    fmv_directive -> DIRECTIVEOPEN_FMV : element_id ]
Rule 66    camera_directive -> DIRECTIVEOPEN_CAMERA : camera_actions ]
Rule 67    choice_directive -> DIRECTIVEOPEN_CHOICE ] choices
Rule 68    choice_directive -> DIRECTIVEOPEN_CHOICE : ID ] choices
Rule 69    choice_directive -> DIRECTIVEOPEN_CHOICE ] STRING choices
Rule 70    choice_directive -> DIRECTIVEOPEN_CHOICE : ID ] STRING choices
Rule 71    section_annotation -> ANNOTATIONOPEN_SECTION : ID )
Rule 72    section_annotation -> ANNOTATIONOPEN_SECTION : ID PARAMSOPEN params_declaration )
Rule 73    flagset_annotation -> ANNOTATIONOPEN_FLAGSET : ID )
Rule 74    flagset_annotation -> ANNOTATIONOPEN_FLAGSET : ID bool_expression )
Rule 75    varset_annotation -> ANNOTATIONOPEN_VARSET : ID )
Rule 76    varset_annotation -> ANNOTATIONOPEN_VARSET : ID inc_dec )
Rule 77    varset_annotation -> ANNOTATIONOPEN_VARSET : ID expression )
Rule 78    dialog_annotation -> ANNOTATIONOPEN_DIALOG : HIDE )
Rule 79    dialog_annotation -> ANNOTATIONOPEN_DIALOG : SHOW )
Rule 80    dialog_annotation -> ANNOTATIONOPEN_DIALOG : AUTO )
Rule 81    goto_annotation -> ANNOTATIONOPEN_GOTO : ID )
Rule 82    execute_annotation -> ANNOTATIONOPEN_EXECUTE : ID )
Rule 83    execute_annotation -> ANNOTATIONOPEN_EXECUTE : ID PARAMSOPEN params_set )
Rule 84    end_annotation -> ANNOTATIONOPEN_END )
Rule 85    end_annotation -> ANNOTATIONOPEN_END : RETURN expression )
Rule 86    while_annotation -> ANNOTATIONOPEN_WHILE : bool_expression ) { block }
Rule 87    if_annotation -> ANNOTATIONOPEN_IF : bool_expression ) { block }
Rule 88    if_annotation -> ANNOTATIONOPEN_IF : bool_expression ) { block } ANNOTATIONOPEN_ELSE ) { block }
Rule 89    if_annotation -> ANNOTATIONOPEN_IF : bool_expression ) { block } else_ifs
Rule 90    if_annotation -> ANNOTATIONOPEN_IF : bool_expression ) { block } else_ifs ANNOTATIONOPEN_ELSE ) { block }
Rule 91    transition_to -> ID TO
Rule 92    actor_states -> ID
Rule 93    actor_states -> ID , actor_states
Rule 94    transition_in -> ID IN
Rule 95    motion_geometry -> destination
Rule 96    motion_geometry -> origin destination
Rule 97    motion_geometry -> destination duration
Rule 98    motion_geometry -> origin destination duration
Rule 99    motion_geometry -> origin
Rule 100   motion_geometry -> origin duration
Rule 101   motion_geometry -> duration
Rule 102   destination -> TO ID
Rule 103   transition_out -> ID OUT
Rule 104   any_element_id -> element_id
Rule 105   any_element_id -> ALL
Rule 106   duration -> FOR NUMBER
Rule 107   duration -> FOR NUMBER SECONDS
Rule 108   duration -> QUICKLY
Rule 109   duration -> SLOWLY
Rule 110   element_id -> STRING
Rule 111   element_id -> ID
Rule 112   camera_actions -> camera_action
Rule 113   camera_actions -> camera_action AND camera_actions
Rule 114   choices -> choice
Rule 115   choices -> choice choices
Rule 116   params_declaration -> ID
Rule 117   params_declaration -> ID = expression
Rule 118   params_declaration -> ID , params_declaration
Rule 119   params_declaration -> ID = expression , params_declaration
Rule 120   bool_expression -> OFF
Rule 121   bool_expression -> ON
Rule 122   bool_expression -> BARE_EXPRESSION
Rule 123   bool_expression -> ID
Rule 124   inc_dec -> INC
Rule 125   inc_dec -> DEC
Rule 126   inc_dec -> INC by_amount
Rule 127   inc_dec -> DEC by_amount
Rule 128   expression -> bool_expression
Rule 129   expression -> STRING
Rule 130   expression -> NUMBER
Rule 131   params_set -> expression
Rule 132   params_set -> ID = expression
Rule 133   params_set -> expression , params_set
Rule 134   params_set -> ID = expression , params_set
Rule 135   else_ifs -> ANNOTATIONOPEN_ELIF : bool_expression ) { block }
Rule 136   else_ifs -> ANNOTATIONOPEN_ELIF : bool_expression ) { block } else_ifs
Rule 137   origin -> FROM ID
Rule 138   camera_action -> SNAP_TO ID
Rule 139   camera_action -> PAN_TO ID
Rule 140   camera_action -> PAN_TO ID duration
Rule 141   camera_action -> ZOOM IN
Rule 142   camera_action -> ZOOM OUT
Rule 143   camera_action -> ZOOM IN duration
Rule 144   camera_action -> ZOOM OUT duration
Rule 145   by_amount -> BY NUMBER
Rule 146   choice -> * STRING : GO destination
Rule 147   choice -> * STRING : SHOW_IF bool_expression , GO destination
Rule 148   choice -> * STRING : varsets AND GO destination
Rule 149   choice -> * STRING : SHOW_IF bool_expression , varsets AND GO destination
Rule 150   varsets -> SET ID inc_dec
Rule 151   varsets -> SET ID expression
Rule 152   varsets -> SET ID inc_dec AND varsets
Rule 153   varsets -> SET ID expression AND varsets

Terminals, with rules where they appear

(                    : 32 34 36 38
)                    : 32 34 36 38 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 88 89 90 90 135 136
*                    : 146 147 148 149
,                    : 41 51 52 93 118 119 133 134 147 149
:                    : 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 68 70 71 72 73 74 75 76 77 78 79 80 81 82 83 85 86 87 88 89 90 135 136 146 147 148 149
=                    : 117 119 132 134
ALL                  : 105
AND                  : 113 148 149 152 153
ANNOTATIONOPEN_DIALOG : 78 79 80
ANNOTATIONOPEN_ELIF  : 135 136
ANNOTATIONOPEN_ELSE  : 88 90
ANNOTATIONOPEN_END   : 84 85
ANNOTATIONOPEN_EXECUTE : 82 83
ANNOTATIONOPEN_FLAGSET : 73 74
ANNOTATIONOPEN_GOTO  : 81
ANNOTATIONOPEN_IF    : 87 88 89 90
ANNOTATIONOPEN_SECTION : 71 72
ANNOTATIONOPEN_VARSET : 75 76 77
ANNOTATIONOPEN_WHILE : 86
AUTO                 : 80
BARE_EXPRESSION      : 122
BY                   : 145
COMMENT              : 6
DEC                  : 125 127
DIRECTIVEOPEN_ACTION : 39 40 41
DIRECTIVEOPEN_CAMERA : 66
DIRECTIVEOPEN_CHOICE : 67 68 69 70
DIRECTIVEOPEN_ENTER  : 31 32 33 34 35 36 37 38
DIRECTIVEOPEN_EXIT   : 42 43 44 45
DIRECTIVEOPEN_FMV    : 65
DIRECTIVEOPEN_GFX    : 53 54 55 56 57 58
DIRECTIVEOPEN_MUSIC  : 46 47 48 49 50 51 52
DIRECTIVEOPEN_SCENE  : 29 30
DIRECTIVEOPEN_SFX    : 59 60 61 62 63 64
FADEOUT_OLD          : 51 52
FOR                  : 106 107
FROM                 : 137
GO                   : 40 41 146 147 148 149
HIDE                 : 78
ID                   : 27 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 68 70 71 72 73 74 75 76 77 81 82 83 91 92 93 94 102 103 111 116 117 118 119 123 132 134 137 138 139 140 150 151 152 153
IN                   : 94 141 143
INC                  : 124 126
LOOP                 : 54 60
NUMBER               : 106 107 130 145
OFF                  : 120
ON                   : 121
OUT                  : 103 142 144
PAN_TO               : 139 140
PARAMSOPEN           : 72 83
PYTHON_BLOCK         : 26
QUICKLY              : 108
RETURN               : 85
SECONDS              : 107
SET                  : 150 151 152 153
SHOW                 : 79
SHOW_IF              : 147 149
SLOWLY               : 109
SNAP_TO              : 138
STOP                 : 46 47 48 49 55 56 57 58 61 62 63 64
STRING               : 27 28 69 70 110 129 146 147 148 149
TO                   : 91 102
ZOOM                 : 141 142 143 144
]                    : 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
error                : 
{                    : 86 87 88 88 89 90 90 135 136
}                    : 86 87 88 88 89 90 90 135 136

Nonterminals, with rules where they appear

action_directive     : 9
actor_states         : 32 34 36 38 39 41 93
annotation           : 4
any_element_id       : 48 49 55 56 61 62
block                : 2 86 87 88 88 89 90 90 135 136 0
bool_expression      : 74 86 87 88 89 90 128 135 136 147 149
by_amount            : 126 127
camera_action        : 112 113
camera_actions       : 66 113
camera_directive     : 15
choice               : 114 115
choice_directive     : 16
choices              : 67 68 69 70 115
destination          : 40 41 95 96 97 98 146 147 148 149
dialog_annotation    : 20
directive            : 3
duration             : 47 49 52 56 58 62 64 97 98 100 101 140 143 144
element_id           : 50 51 52 53 54 59 60 65 104
else_ifs             : 89 90 136
end_annotation       : 23
enter_directive      : 8
execute_annotation   : 22
exit_directive       : 10
expression           : 77 85 117 119 131 132 133 134 151 153
flagset_annotation   : 18
fmv_directive        : 14
gfx_directive        : 12
goto_annotation      : 21
if_annotation        : 25
inc_dec              : 76 150 152
line                 : 5
motion_geometry      : 35 36 37 38 44 45
music_directive      : 11
origin               : 96 98 99 100
params_declaration   : 72 118 119
params_set           : 83 133 134
scene_directive      : 7
section_annotation   : 17
sfx_directive        : 13
statement            : 1 2
transition_in        : 33 34 37 38
transition_out       : 43 45
transition_to        : 30
varset_annotation    : 19
varsets              : 148 149 152 153
while_annotation     : 24

Parsing method: LALR

state 0

    (0) S' -> . block
    (1) block -> . statement
    (2) block -> . statement block
    (3) statement -> . directive
    (4) statement -> . annotation
    (5) statement -> . line
    (6) statement -> . COMMENT
    (7) directive -> . scene_directive
    (8) directive -> . enter_directive
    (9) directive -> . action_directive
    (10) directive -> . exit_directive
    (11) directive -> . music_directive
    (12) directive -> . gfx_directive
    (13) directive -> . sfx_directive
    (14) directive -> . fmv_directive
    (15) directive -> . camera_directive
    (16) directive -> . choice_directive
    (17) annotation -> . section_annotation
    (18) annotation -> . flagset_annotation
    (19) annotation -> . varset_annotation
    (20) annotation -> . dialog_annotation
    (21) annotation -> . goto_annotation
    (22) annotation -> . execute_annotation
    (23) annotation -> . end_annotation
    (24) annotation -> . while_annotation
    (25) annotation -> . if_annotation
    (26) annotation -> . PYTHON_BLOCK
    (27) line -> . ID : STRING
    (28) line -> . : STRING
    (29) scene_directive -> . DIRECTIVEOPEN_SCENE : ID ]
    (30) scene_directive -> . DIRECTIVEOPEN_SCENE : transition_to ID ]
    (31) enter_directive -> . DIRECTIVEOPEN_ENTER : ID ]
    (32) enter_directive -> . DIRECTIVEOPEN_ENTER : ID ( actor_states ) ]
    (33) enter_directive -> . DIRECTIVEOPEN_ENTER : ID transition_in ]
    (34) enter_directive -> . DIRECTIVEOPEN_ENTER : ID ( actor_states ) transition_in ]
    (35) enter_directive -> . DIRECTIVEOPEN_ENTER : ID motion_geometry ]
    (36) enter_directive -> . DIRECTIVEOPEN_ENTER : ID ( actor_states ) motion_geometry ]
    (37) enter_directive -> . DIRECTIVEOPEN_ENTER : ID transition_in motion_geometry ]
    (38) enter_directive -> . DIRECTIVEOPEN_ENTER : ID ( actor_states ) transition_in motion_geometry ]
    (39) action_directive -> . DIRECTIVEOPEN_ACTION ID : actor_states ]
    (40) action_directive -> . DIRECTIVEOPEN_ACTION ID : GO destination ]
    (41) action_directive -> . DIRECTIVEOPEN_ACTION ID : actor_states , GO destination ]
    (42) exit_directive -> . DIRECTIVEOPEN_EXIT : ID ]
    (43) exit_directive -> . DIRECTIVEOPEN_EXIT : ID transition_out ]
    (44) exit_directive -> . DIRECTIVEOPEN_EXIT : ID motion_geometry ]
    (45) exit_directive -> . DIRECTIVEOPEN_EXIT : ID transition_out motion_geometry ]
    (46) music_directive -> . DIRECTIVEOPEN_MUSIC : STOP ]
    (47) music_directive -> . DIRECTIVEOPEN_MUSIC : STOP duration ]
    (48) music_directive -> . DIRECTIVEOPEN_MUSIC : STOP any_element_id ]
    (49) music_directive -> . DIRECTIVEOPEN_MUSIC : STOP any_element_id duration ]
    (50) music_directive -> . DIRECTIVEOPEN_MUSIC : element_id ]
    (51) music_directive -> . DIRECTIVEOPEN_MUSIC : element_id , FADEOUT_OLD ]
    (52) music_directive -> . DIRECTIVEOPEN_MUSIC : element_id , FADEOUT_OLD duration ]
    (53) gfx_directive -> . DIRECTIVEOPEN_GFX : element_id ]
    (54) gfx_directive -> . DIRECTIVEOPEN_GFX : LOOP element_id ]
    (55) gfx_directive -> . DIRECTIVEOPEN_GFX : STOP any_element_id ]
    (56) gfx_directive -> . DIRECTIVEOPEN_GFX : STOP any_element_id duration ]
    (57) gfx_directive -> . DIRECTIVEOPEN_GFX : STOP ]
    (58) gfx_directive -> . DIRECTIVEOPEN_GFX : STOP duration ]
    (59) sfx_directive -> . DIRECTIVEOPEN_SFX : element_id ]
    (60) sfx_directive -> . DIRECTIVEOPEN_SFX : LOOP element_id ]
    (61) sfx_directive -> . DIRECTIVEOPEN_SFX : STOP any_element_id ]
    (62) sfx_directive -> . DIRECTIVEOPEN_SFX : STOP any_element_id duration ]
    (63) sfx_directive -> . DIRECTIVEOPEN_SFX : STOP ]
    (64) sfx_directive -> . DIRECTIVEOPEN_SFX : STOP duration ]
    (65) fmv_directive -> . DIRECTIVEOPEN_FMV : element_id ]
    (66) camera_directive -> . DIRECTIVEOPEN_CAMERA : camera_actions ]
    (67) choice_directive -> . DIRECTIVEOPEN_CHOICE ] choices
    (68) choice_directive -> . DIRECTIVEOPEN_CHOICE : ID ] choices
    (69) choice_directive -> . DIRECTIVEOPEN_CHOICE ] STRING choices
    (70) choice_directive -> . DIRECTIVEOPEN_CHOICE : ID ] STRING choices
    (71) section_annotation -> . ANNOTATIONOPEN_SECTION : ID )
    (72) section_annotation -> . ANNOTATIONOPEN_SECTION : ID PARAMSOPEN params_declaration )
    (73) flagset_annotation -> . ANNOTATIONOPEN_FLAGSET : ID )
    (74) flagset_annotation -> . ANNOTATIONOPEN_FLAGSET : ID bool_expression )
    (75) varset_annotation -> . ANNOTATIONOPEN_VARSET : ID )
    (76) varset_annotation -> . ANNOTATIONOPEN_VARSET : ID inc_dec )
    (77) varset_annotation -> . ANNOTATIONOPEN_VARSET : ID expression )
    (78) dialog_annotation -> . ANNOTATIONOPEN_DIALOG : HIDE )
    (79) dialog_annotation -> . ANNOTATIONOPEN_DIALOG : SHOW )
    (80) dialog_annotation -> . ANNOTATIONOPEN_DIALOG : AUTO )
    (81) goto_annotation -> . ANNOTATIONOPEN_GOTO : ID )
    (82) execute_annotation -> . ANNOTATIONOPEN_EXECUTE : ID )
    (83) execute_annotation -> . ANNOTATIONOPEN_EXECUTE : ID PARAMSOPEN params_set )
    (84) end_annotation -> . ANNOTATIONOPEN_END )
    (85) end_annotation -> . ANNOTATIONOPEN_END : RETURN expression )
    (86) while_annotation -> . ANNOTATIONOPEN_WHILE : bool_expression ) { block }
    (87) if_annotation -> . ANNOTATIONOPEN_IF : bool_expression ) { block }
    (88) if_annotation -> . ANNOTATIONOPEN_IF : bool_expression ) { block } ANNOTATIONOPEN_ELSE ) { block }
    (89) if_annotation -> . ANNOTATIONOPEN_IF : bool_expression ) { block } else_ifs
    (90) if_annotation -> . ANNOTATIONOPEN_IF : bool_expression ) { block } else_ifs ANNOTATIONOPEN_ELSE ) { block }

    COMMENT         shift and go to state 14
    PYTHON_BLOCK    shift and go to state 8
    ID              shift and go to state 17
    :               shift and go to state 23
    DIRECTIVEOPEN_SCENE shift and go to state 41
    DIRECTIVEOPEN_ENTER shift and go to state 11
    DIRECTIVEOPEN_ACTION shift and go to state 39
    DIRECTIVEOPEN_EXIT shift and go to state 2
    DIRECTIVEOPEN_MUSIC shift and go to state 1
    DIRECTIVEOPEN_GFX shift and go to state 37
    DIRECTIVEOPEN_SFX shift and go to state 10
    DIRECTIVEOPEN_FMV shift and go to state 24
    DIRECTIVEOPEN_CAMERA shift and go to state 21
    DIRECTIVEOPEN_CHOICE shift and go to state 7
    ANNOTATIONOPEN_SECTION shift and go to state 46
    ANNOTATIONOPEN_FLAGSET shift and go to state 6
    ANNOTATIONOPEN_VARSET shift and go to state 28
    ANNOTATIONOPEN_DIALOG shift and go to state 29
    ANNOTATIONOPEN_GOTO shift and go to state 12
    ANNOTATIONOPEN_EXECUTE shift and go to state 9
    ANNOTATIONOPEN_END shift and go to state 18
    ANNOTATIONOPEN_WHILE shift and go to state 5
    ANNOTATIONOPEN_IF shift and go to state 44

    gfx_directive                  shift and go to state 3
    flagset_annotation             shift and go to state 4
    section_annotation             shift and go to state 13
    directive                      shift and go to state 15
    if_annotation                  shift and go to state 16
    choice_directive               shift and go to state 19
    statement                      shift and go to state 20
    fmv_directive                  shift and go to state 22
    camera_directive               shift and go to state 25
    scene_directive                shift and go to state 26
    goto_annotation                shift and go to state 27
    execute_annotation             shift and go to state 30
    line                           shift and go to state 31
    annotation                     shift and go to state 32
    action_directive               shift and go to state 33
    while_annotation               shift and go to state 34
    enter_directive                shift and go to state 35
    exit_directive                 shift and go to state 36
    end_annotation                 shift and go to state 38
    varset_annotation              shift and go to state 40
    dialog_annotation              shift and go to state 42
    sfx_directive                  shift and go to state 43
    music_directive                shift and go to state 45
    block                          shift and go to state 47

state 1

    (46) music_directive -> DIRECTIVEOPEN_MUSIC . : STOP ]
    (47) music_directive -> DIRECTIVEOPEN_MUSIC . : STOP duration ]
    (48) music_directive -> DIRECTIVEOPEN_MUSIC . : STOP any_element_id ]
    (49) music_directive -> DIRECTIVEOPEN_MUSIC . : STOP any_element_id duration ]
    (50) music_directive -> DIRECTIVEOPEN_MUSIC . : element_id ]
    (51) music_directive -> DIRECTIVEOPEN_MUSIC . : element_id , FADEOUT_OLD ]
    (52) music_directive -> DIRECTIVEOPEN_MUSIC . : element_id , FADEOUT_OLD duration ]

    :               shift and go to state 48


state 2

    (42) exit_directive -> DIRECTIVEOPEN_EXIT . : ID ]
    (43) exit_directive -> DIRECTIVEOPEN_EXIT . : ID transition_out ]
    (44) exit_directive -> DIRECTIVEOPEN_EXIT . : ID motion_geometry ]
    (45) exit_directive -> DIRECTIVEOPEN_EXIT . : ID transition_out motion_geometry ]

    :               shift and go to state 49


state 3

    (12) directive -> gfx_directive .

    COMMENT         reduce using rule 12 (directive -> gfx_directive .)
    PYTHON_BLOCK    reduce using rule 12 (directive -> gfx_directive .)
    ID              reduce using rule 12 (directive -> gfx_directive .)
    :               reduce using rule 12 (directive -> gfx_directive .)
    DIRECTIVEOPEN_SCENE reduce using rule 12 (directive -> gfx_directive .)
    DIRECTIVEOPEN_ENTER reduce using rule 12 (directive -> gfx_directive .)
    DIRECTIVEOPEN_ACTION reduce using rule 12 (directive -> gfx_directive .)
    DIRECTIVEOPEN_EXIT reduce using rule 12 (directive -> gfx_directive .)
    DIRECTIVEOPEN_MUSIC reduce using rule 12 (directive -> gfx_directive .)
    DIRECTIVEOPEN_GFX reduce using rule 12 (directive -> gfx_directive .)
    DIRECTIVEOPEN_SFX reduce using rule 12 (directive -> gfx_directive .)
    DIRECTIVEOPEN_FMV reduce using rule 12 (directive -> gfx_directive .)
    DIRECTIVEOPEN_CAMERA reduce using rule 12 (directive -> gfx_directive .)
    DIRECTIVEOPEN_CHOICE reduce using rule 12 (directive -> gfx_directive .)
    ANNOTATIONOPEN_SECTION reduce using rule 12 (directive -> gfx_directive .)
    ANNOTATIONOPEN_FLAGSET reduce using rule 12 (directive -> gfx_directive .)
    ANNOTATIONOPEN_VARSET reduce using rule 12 (directive -> gfx_directive .)
    ANNOTATIONOPEN_DIALOG reduce using rule 12 (directive -> gfx_directive .)
    ANNOTATIONOPEN_GOTO reduce using rule 12 (directive -> gfx_directive .)
    ANNOTATIONOPEN_EXECUTE reduce using rule 12 (directive -> gfx_directive .)
    ANNOTATIONOPEN_END reduce using rule 12 (directive -> gfx_directive .)
    ANNOTATIONOPEN_WHILE reduce using rule 12 (directive -> gfx_directive .)
    ANNOTATIONOPEN_IF reduce using rule 12 (directive -> gfx_directive .)
    $end            reduce using rule 12 (directive -> gfx_directive .)
    }               reduce using rule 12 (directive -> gfx_directive .)


state 4

    (18) annotation -> flagset_annotation .

    COMMENT         reduce using rule 18 (annotation -> flagset_annotation .)
    PYTHON_BLOCK    reduce using rule 18 (annotation -> flagset_annotation .)
    ID              reduce using rule 18 (annotation -> flagset_annotation .)
    :               reduce using rule 18 (annotation -> flagset_annotation .)
    DIRECTIVEOPEN_SCENE reduce using rule 18 (annotation -> flagset_annotation .)
    DIRECTIVEOPEN_ENTER reduce using rule 18 (annotation -> flagset_annotation .)
    DIRECTIVEOPEN_ACTION reduce using rule 18 (annotation -> flagset_annotation .)
    DIRECTIVEOPEN_EXIT reduce using rule 18 (annotation -> flagset_annotation .)
    DIRECTIVEOPEN_MUSIC reduce using rule 18 (annotation -> flagset_annotation .)
    DIRECTIVEOPEN_GFX reduce using rule 18 (annotation -> flagset_annotation .)
    DIRECTIVEOPEN_SFX reduce using rule 18 (annotation -> flagset_annotation .)
    DIRECTIVEOPEN_FMV reduce using rule 18 (annotation -> flagset_annotation .)
    DIRECTIVEOPEN_CAMERA reduce using rule 18 (annotation -> flagset_annotation .)
    DIRECTIVEOPEN_CHOICE reduce using rule 18 (annotation -> flagset_annotation .)
    ANNOTATIONOPEN_SECTION reduce using rule 18 (annotation -> flagset_annotation .)
    ANNOTATIONOPEN_FLAGSET reduce using rule 18 (annotation -> flagset_annotation .)
    ANNOTATIONOPEN_VARSET reduce using rule 18 (annotation -> flagset_annotation .)
    ANNOTATIONOPEN_DIALOG reduce using rule 18 (annotation -> flagset_annotation .)
    ANNOTATIONOPEN_GOTO reduce using rule 18 (annotation -> flagset_annotation .)
    ANNOTATIONOPEN_EXECUTE reduce using rule 18 (annotation -> flagset_annotation .)
    ANNOTATIONOPEN_END reduce using rule 18 (annotation -> flagset_annotation .)
    ANNOTATIONOPEN_WHILE reduce using rule 18 (annotation -> flagset_annotation .)
    ANNOTATIONOPEN_IF reduce using rule 18 (annotation -> flagset_annotation .)
    }               reduce using rule 18 (annotation -> flagset_annotation .)
    $end            reduce using rule 18 (annotation -> flagset_annotation .)


state 5

    (86) while_annotation -> ANNOTATIONOPEN_WHILE . : bool_expression ) { block }

    :               shift and go to state 50


state 6

    (73) flagset_annotation -> ANNOTATIONOPEN_FLAGSET . : ID )
    (74) flagset_annotation -> ANNOTATIONOPEN_FLAGSET . : ID bool_expression )

    :               shift and go to state 51


state 7

    (67) choice_directive -> DIRECTIVEOPEN_CHOICE . ] choices
    (68) choice_directive -> DIRECTIVEOPEN_CHOICE . : ID ] choices
    (69) choice_directive -> DIRECTIVEOPEN_CHOICE . ] STRING choices
    (70) choice_directive -> DIRECTIVEOPEN_CHOICE . : ID ] STRING choices

    ]               shift and go to state 53
    :               shift and go to state 52


state 8

    (26) annotation -> PYTHON_BLOCK .

    COMMENT         reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    PYTHON_BLOCK    reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    ID              reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    :               reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    DIRECTIVEOPEN_SCENE reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    DIRECTIVEOPEN_ENTER reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    DIRECTIVEOPEN_ACTION reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    DIRECTIVEOPEN_EXIT reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    DIRECTIVEOPEN_MUSIC reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    DIRECTIVEOPEN_GFX reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    DIRECTIVEOPEN_SFX reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    DIRECTIVEOPEN_FMV reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    DIRECTIVEOPEN_CAMERA reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    DIRECTIVEOPEN_CHOICE reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    ANNOTATIONOPEN_SECTION reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    ANNOTATIONOPEN_FLAGSET reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    ANNOTATIONOPEN_VARSET reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    ANNOTATIONOPEN_DIALOG reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    ANNOTATIONOPEN_GOTO reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    ANNOTATIONOPEN_EXECUTE reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    ANNOTATIONOPEN_END reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    ANNOTATIONOPEN_WHILE reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    ANNOTATIONOPEN_IF reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    }               reduce using rule 26 (annotation -> PYTHON_BLOCK .)
    $end            reduce using rule 26 (annotation -> PYTHON_BLOCK .)


state 9

    (82) execute_annotation -> ANNOTATIONOPEN_EXECUTE . : ID )
    (83) execute_annotation -> ANNOTATIONOPEN_EXECUTE . : ID PARAMSOPEN params_set )

    :               shift and go to state 54


state 10

    (59) sfx_directive -> DIRECTIVEOPEN_SFX . : element_id ]
    (60) sfx_directive -> DIRECTIVEOPEN_SFX . : LOOP element_id ]
    (61) sfx_directive -> DIRECTIVEOPEN_SFX . : STOP any_element_id ]
    (62) sfx_directive -> DIRECTIVEOPEN_SFX . : STOP any_element_id duration ]
    (63) sfx_directive -> DIRECTIVEOPEN_SFX . : STOP ]
    (64) sfx_directive -> DIRECTIVEOPEN_SFX . : STOP duration ]

    :               shift and go to state 55


state 11
